Fix overflow on page when scrolling in spaces list due to virtual scrolling

--- a/src/components/app-core/layout.css
+++ b/src/components/app-core/layout.css
@@ -8,6 +8,10 @@ html {
     background-color: var(--mapbox-background-color);
 }
 
+body {
+    overflow-y: hidden;
+}
+
 .default-layout {
     display: flex;
     flex-direction: column;
